# summarizer-api

./: Dockerfile  Makefile  app.py  docker-compose.yml  pyproject.toml  requirements.txt
summarizer_api/: __init__.py  config.py
summarizer_api/application/health_checks/: views.py
summarizer_api/application/pysummarization/: views.py
summarizer_api/application/summpy/: views.py
summarizer_api/application/sumy/: views.py
summarizer_api/summarizer/summpy/: lexrank.py  mcp_summ.py
summarizer_api/summarizer/summpy/misc/: divrank.py  mecab_segmenter.py
tests/: __init__.py
tests/application/health_checks/: test_views.py
tests/application/summpy/: test_views.py
